Bug 291185 - KDevelop shows black scrollbars in popup (hint) windows
Summary: KDevelop shows black scrollbars in popup (hint) windows
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 16:00 UTC by Alexander
Modified: 2013-04-04 22:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Cleanlooks (63.57 KB, image/png)
2012-01-10 16:00 UTC, Alexander
Details
Oxygen (68.42 KB, image/png)
2012-01-10 16:00 UTC, Alexander
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2012-01-10 16:00:23 UTC
Created attachment 67664 [details]
Cleanlooks

Version:           git master (using KDE 4.7.2) 
OS:                Linux

I'm using KDevelop git master (2012-01-09), but this bug has been present for a long time now.

Basically the code popup window (the one that shows the documentation, etc...) has black, visually unusable scrollbars under most themes. I'm attaching a screenshot taken with Cleanlooks (unusable) and Oxygen (ok-ish) styles.
I tried other styles like Plastique and Windows, and there are various degrees of brokenness.
If this is an intended styling, please disable it, it's broken.

Thanks!

Reproducible: Always

Steps to Reproduce:
Open KDevelop, hover some symbol with lots of documentation (e.g. cmake's add_definitions).


Expected Results:  
The scrollbars should look native, like in the rest of the application.

openSUSE 12.1 x86-64.
Comment 1 Alexander 2012-01-10 16:00:41 UTC
Created attachment 67665 [details]
Oxygen
Comment 2 Aleix Pol 2012-01-18 01:16:35 UTC
Agreed, does anybody know why does this happen?
Comment 3 Kevin Funk 2012-12-23 01:49:26 UTC
In AbstractNavigationWidget, there are some setPalette(...) calls. They are probably wrong - i quickly checked - but when I removed them I still had a black background for the up/down actions for the scroll bar. The scroll bar itself was fine, though.

Someone else needs to check this.
Comment 4 Aleix Pol 2013-04-03 02:58:35 UTC
Git commit 09b05ae3b18c33dcee09a4b5a21f76f1a365a4a1 by Aleix Pol.
Committed on 03/04/2013 at 04:57.
Pushed by apol into branch 'master'.

Properly set a black on white palette

The current implementation whas changing too much colors, such as the scroll
bars, and it looked ugly. Hopefully now it's a bit better.

M  +5    -1    language/duchain/navigation/abstractnavigationwidget.cpp

http://commits.kde.org/kdevplatform/09b05ae3b18c33dcee09a4b5a21f76f1a365a4a1
Comment 5 Aleix Pol 2013-04-04 22:48:35 UTC
Git commit d568441f08be84e94826c48c65c54a66d0cc843a by Aleix Pol.
Committed on 03/04/2013 at 04:57.
Pushed by apol into branch '1.5'.

Properly set a black on white palette

The current implementation whas changing too much colors, such as the scroll
bars, and it looked ugly. Hopefully now it's a bit better.

M  +5    -1    language/duchain/navigation/abstractnavigationwidget.cpp

http://commits.kde.org/kdevplatform/d568441f08be84e94826c48c65c54a66d0cc843a