Properly set a black on white palette

The current implementation whas changing too much colors, such as the scroll
bars, and it looked ugly. Hopefully now it's a bit better.

BUG: 291185